[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-chat-to-md"
version = "0.1.0"
description = "Convert Claude Code chat sessions to Markdown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["claude", "claude-code", "markdown", "chat", "export"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.scripts]
claude-chat-to-md = "claude_chat_to_md:main"
